--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -105,10 +105,10 @@
     <!-- Boolean indicating whether the wifi chipset has p2p support -->
     <bool translatable="false" name="config_wifi_p2p_support">true</bool>
 
-    <bool name="config_forceDisableHardwareKeyboard">true</bool>
+    <!-- <bool name="config_forceDisableHardwareKeyboard">true</bool> -->
 
     <!-- True will enable the electron beam screen-off animation. -->
-    <bool name="config_screenOffAnimation">false</bool>
+    <!-- <bool name="config_screenOffAnimation">false</bool> -->
 
     <!--  Maximum number of supported users -->
     <integer name="config_multiuserMaximumUsers">5</integer>
