--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -23,13 +23,18 @@
 
     <bool name="config_showNavigationBar">true</bool>
 
+    <!-- This device is not "voice capable"; it's data-only. -->
+    <bool name="config_voice_capable">false</bool>
+
+    <bool name="config_showNavigationBar">false</bool>
+
     <bool name="config_batterySdCardAccessibility">true</bool>
 
     <bool name="config_sf_limitedAlpha">false</bool>
  
-   <bool name="config_allowAllRotations">true</bool>
+    <bool name="config_allowAllRotations">true</bool>
 
-   <bool name="config_sf_slowBlur">true</bool>
+    <bool name="config_sf_slowBlur">true</bool>
 
     <bool name="config_automatic_brightness_available">true</bool>
 
@@ -44,10 +49,22 @@
 
          Must be overridden in platform specific overlays -->
     <integer-array name="config_autoBrightnessLevels">
-	<item>15</item>
-	<item>150</item>
-	<item>1500</item>
-	<item>15000</item>
+         <item>10</item>
+         <item>25</item>
+         <item>50</item>
+         <item>100</item>
+         <item>150</item>
+         <item>200</item>
+         <item>700</item>
+         <item>1300</item>
+         <item>2000</item>
+         <item>3000</item>
+         <item>4000</item>
+         <item>5000</item>
+         <item>6000</item>
+         <item>7000</item>
+         <item>8000</item>
+         <item>9000</item>
     </integer-array>
 
     <!-- Array of output values for LCD backlight corresponding to the LUX values
@@ -55,11 +72,23 @@
          than the size of the config_autoBrightnessLevels array.
          This must be overridden in platform specific overlays -->
     <integer-array name="config_autoBrightnessLcdBacklightValues">
-	<item>42</item>
-	<item>96</item>
-	<item>150</item>
-	<item>196</item>
-	<item>255</item>
+         <item>32</item>
+         <item>32</item>
+         <item>32</item>
+         <item>32</item>
+         <item>64</item>
+         <item>64</item>
+         <item>95</item>
+         <item>95</item>
+         <item>122</item>
+         <item>149</item>
+         <item>176</item>
+         <item>197</item>
+         <item>228</item>
+         <item>255</item>
+         <item>255</item>
+         <item>255</item>
+         <item>255</item>
     </integer-array>
 
     <!-- Array of output values for button backlight corresponding to the LUX values
@@ -72,6 +101,18 @@
         <item>0</item>
         <item>0</item>
         <item>0</item>
+        <item>0</item>
+        <item>0</item>
+        <item>0</item>
+        <item>0</item>
+        <item>0</item>
+        <item>0</item>
+        <item>0</item>
+        <item>0</item>
+        <item>0</item>
+        <item>0</item>
+        <item>0</item>
+        <item>0</item>
     </integer-array>
 
     <!-- Array of output values for keyboard backlight corresponding to the LUX values
@@ -79,15 +120,27 @@
          than the size of the config_autoBrightnessLevels array.
          This must be overridden in platform specific overlays -->
     <integer-array name="config_autoBrightnessKeyboardBacklightValues">
-        <item>255</item>
-        <item>255</item>
+        <item>0</item>
+        <item>0</item>
+        <item>0</item>
+        <item>0</item>
+        <item>0</item>
+        <item>0</item>
+        <item>0</item>
+        <item>0</item>
+        <item>0</item>
+        <item>0</item>
+        <item>0</item>
+        <item>0</item>
+        <item>0</item>
+        <item>0</item>
         <item>0</item>
         <item>0</item>
         <item>0</item>
     </integer-array>
 
     <!-- Minimum screen brightness allowed by the power manager. -->
-    <integer name="config_screenBrightnessDim">20</integer>
+    <integer name="config_screenBrightnessDim">10</integer>
 
     <string-array translatable="false" name="config_tether_usb_regexs">
 	<item>"rndis0"</item>
